# math-tutor

./: docker-compose.yaml
math_tutor_backend/: README.md  manage.py  pyproject.toml  pyrightconfig.json  ruff.toml
math_tutor_backend/math_base/: apps.py  factories.py  models.py  utils.py
math_tutor_backend/math_base/migrations/: 0001_initial.py
math_tutor_backend/math_content/: apps.py  factories.py  models.py  scraping.py  serializers.py  static_data.py  tasks.py  tests.py  urls.py  views.py
math_tutor_backend/math_content/management/commands/: import_collatz.py  import_curves.py  import_mathematicians.py  import_st_andrew_topics.py
math_tutor_backend/math_content/math_functions/: common.py  prime_numbers.py
math_tutor_backend/math_content/migrations/: 0001_initial.py  0002_remove_standrewstopic_category_and_more.py  0003_remove_standrewsbiography_html_and_more.py  0004_standrewscurve_alter_standrewsbiography_options_and_more.py  0005_alter_standrewsbiography_options.py  0006_standrewsbiography_year_order.py  0007_alter_standrewsbiography_options_and_more.py  0008_alter_collatzconjecture_two_adic_total_distance.py
math_tutor_backend/math_tutor/: asgi.py  celery.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
math_tutor_frontend/: package.json
math_tutor_frontend/math_tutor/: .gitignore  README.md  package.json  tsconfig.json
math_tutor_frontend/math_tutor/public/: index.html
math_tutor_frontend/math_tutor/src/: App.css  App.tsx  index.css  reportWebVitals.ts
math_tutor_frontend/math_tutor/src/config/: config.ts
math_tutor_frontend/math_tutor/src/content/: BioPage.tsx  CollatzPage.tsx  CurvePage.tsx  LandingPage.tsx  NumberVisualiser.tsx  PrimeNumberPage.tsx  TopicPage.tsx
math_tutor_frontend/math_tutor/src/content/components/: CollatzDisplay.tsx  ColoredNumbers.tsx  IframeModal.tsx  PrimeNumber.tsx  StAndrewBios.tsx  StAndrewCurves.tsx  StAndrewTable.tsx  StAndrewTopics.tsx  TopicList.tsx  iframe_modal_style.css
math_tutor_frontend/math_tutor/src/content/hooks/: useFetch.ts  useFetchBios.ts  useFetchCollatz.ts  useFetchCurves.ts  useFetchTopics.ts  useFetchTwoToTheTenAdic.ts  useWebsocketPrimes.ts
math_tutor_frontend/math_tutor/src/services/: api.ts
math_tutor_frontend/math_tutor/src/types/: apiTypes.ts
