[project]
name = "math-tutor-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "django>=5.1.6",
    "django-model-utils>=5.0.0",
    "django-stubs>=5.1.3",
    "djangorestframework>=3.15.2",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=8.32.0",
    "isort>=6.0.0",
    "python-lsp-server[all]>=1.12.2",
    "ruff>=0.9.6",
]


[tool.pylint]
disable = ["C0114", "C0115", "C0116"]

[tool.pylsp]
plugins = ["pylint"]

[tool.pyflakes]
max-line-length = 88

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
extend-exclude = '.*/migrations/.*'
